--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ionic",
-  "version": "3.19.0",
+  "version": "4.0.0-rc.0",
   "description": "A tool for creating and developing Ionic Framework mobile apps.",
   "homepage": "https://ionicframework.com",
   "author": "Ionic Team <hi@ionic.io> (https://ionicframework.com) ",
@@ -44,8 +44,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@ionic/cli-framework": "0.1.2",
-    "@ionic/cli-utils": "1.19.0",
+    "@ionic/cli-framework": "1.0.0-rc.0",
+    "@ionic/cli-utils": "2.0.0-rc.0",
     "chalk": "^2.3.0",
     "debug": "^3.1.0",
     "lodash": "^4.17.5",
