--- a/packages/@ionic/discover/package.json
+++ b/packages/@ionic/discover/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ionic/discover",
-  "version": "0.4.0",
+  "version": "1.0.0-rc.0",
   "description": "Simple UDP based protocol for service discovery implemented in pure JS.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
