--- a/packages/@ionic/lab/package.json
+++ b/packages/@ionic/lab/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ionic/lab",
-  "version": "0.0.0",
+  "version": "1.0.0-rc.0",
   "description": "Ionic Lab utility for developing Ionic apps, used by Ionic CLI",
   "bin": {
     "ionic-lab": "./bin/ionic-lab"
@@ -38,7 +38,7 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
-    "@ionic/cli-framework": "0.1.2",
+    "@ionic/cli-framework": "1.0.0-rc.0",
     "chalk": "^2.3.0",
     "express": "^4.16.2",
     "tslib": "^1.9.0"
