--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "watch": "lerna run watch --parallel",
     "docs": "node packages/@ionic/cli-scripts/bin/ionic-cli-scripts docs",
     "docs:watch": "chokidar 'packages/@ionic/cli-scripts/dist/docs/**/*.js' -c 'npm run docs'",
+    "publish:rc": "lerna publish --exact --npm-tag=rc",
     "publish:canary": "lerna publish --canary --exact --npm-tag=canary --skip-git",
     "publish:testing": "lerna publish --canary=testing --exact --npm-tag=testing --skip-git",
     "publish": "lerna publish --exact",
