--- a/packages/@ionic/cli-hooks/package.json
+++ b/packages/@ionic/cli-hooks/package.json
@@ -9,7 +9,7 @@
     "clean": "rimraf add-cordova-engine.* remove-cordova-engine.* utils",
     "lint": "tslint --config tslint.js --project tsconfig.json",
     "build": "npm run clean && tsc",
-    "watch": "tsc -w",
+    "watch": "tsc -w --preserveWatchOutput",
     "prepublishOnly": "npm run build"
   },
   "repository": {
@@ -31,7 +31,7 @@
     "rimraf": "^2.6.2",
     "ts-jest": "^22.4.1",
     "tslint": "^5.9.1",
-    "typescript": "~2.6.2"
+    "typescript": "~2.8.1"
   },
   "jest": {
     "globals": {
