--- a/packages/@ionic/discover/package.json
+++ b/packages/@ionic/discover/package.json
@@ -23,7 +23,7 @@
     "clean": "rimraf dist",
     "lint": "tslint --config tslint.js --project tsconfig.json",
     "build": "npm run clean && tsc",
-    "watch": "tsc -w",
+    "watch": "tsc -w --preserveWatchOutput",
     "test": "jest",
     "prepublishOnly": "npm run build"
   },
@@ -31,19 +31,19 @@
     "debug": "^3.1.0",
     "netmask": "^1.0.6",
     "tslib": "^1.9.0",
-    "ws": "^5.0.0"
+    "ws": "^5.1.1"
   },
   "devDependencies": {
     "@types/debug": "0.0.30",
     "@types/netmask": "^1.0.30",
     "@types/node": "^6.0.101",
-    "@types/ws": "^4.0.1",
+    "@types/ws": "^4.0.2",
     "jest": "^22.4.2",
     "jest-cli": "^22.4.2",
     "rimraf": "^2.6.2",
     "ts-jest": "^22.4.1",
     "tslint": "^5.9.1",
-    "typescript": "~2.6.2"
+    "typescript": "~2.8.1"
   },
   "jest": {
     "globals": {
