--- a/packages/@ionic/lab/package.json
+++ b/packages/@ionic/lab/package.json
@@ -34,7 +34,7 @@
     "build.tsc": "npm run clean.tsc && tsc",
     "watch": "npm run watch.tsc",
     "watch.stencil": "npm run clean.stencil && concurrently \"stencil build --dev --watch\" \"stencil-dev-server --address localhost --httpPort 8900 --no-open\"",
-    "watch.tsc": "tsc -w",
+    "watch.tsc": "tsc -w --preserveWatchOutput",
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
@@ -54,7 +54,7 @@
     "rimraf": "^2.6.2",
     "ts-jest": "^22.4.1",
     "tslint": "^5.9.1",
-    "typescript": "~2.6.2"
+    "typescript": "~2.8.1"
   },
   "jest": {
     "globals": {
