--- a/packages/@ionic/v1-toolkit/package.json
+++ b/packages/@ionic/v1-toolkit/package.json
@@ -28,7 +28,7 @@
     "clean": "rimraf dist",
     "lint": "tslint --config tslint.js --project tsconfig.json",
     "build": "npm run clean && tsc",
-    "watch": "tsc -w",
+    "watch": "tsc -w --preserveWatchOutput",
     "test": "jest",
     "prepublishOnly": "npm run build"
   },
@@ -42,7 +42,7 @@
     "http-proxy-middleware": "^0.17.4",
     "tiny-lr": "^1.1.0",
     "tslib": "^1.9.0",
-    "ws": "3.3.2"
+    "ws": "^5.1.1"
   },
   "devDependencies": {
     "@types/chokidar": "^1.7.4",
@@ -51,13 +51,13 @@
     "@types/gulp": "^3.8.36",
     "@types/http-proxy-middleware": "^0.17.2",
     "@types/node": "^6.0.101",
-    "@types/ws": "^3.2.1",
+    "@types/ws": "^4.0.2",
     "jest": "^22.4.2",
     "jest-cli": "^22.4.2",
     "rimraf": "^2.6.2",
     "ts-jest": "^22.4.1",
     "tslint": "^5.9.1",
-    "typescript": "~2.6.2"
+    "typescript": "~2.8.1"
   },
   "jest": {
     "globals": {
