--- a/packages/@ionic/cli-utils/tsconfig.json
+++ b/packages/@ionic/cli-utils/tsconfig.json
@@ -12,6 +12,7 @@
     "../../../types/elementtree.d.ts",
     "../../../types/leek.d.ts",
     "../../../types/os-name.d.ts",
+    "../../../types/rxjs-custom.d.ts",
     "../../../types/slice-ansi.d.ts",
     "../../../types/ssh-config.d.ts",
     "../../../types/string-width.d.ts",
