--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,77 +1,120 @@
 version: 2
 
+aliases:
+  - &restore-cache
+    keys:
+      - dependency-cache-{{ .Branch }}-{{ checksum "package.json" }}
+      - dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/cli-framework/package.json" }}
+      - dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/cli-hooks/package.json" }}
+      - dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/cli-utils/package.json" }}
+      - dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/cli-scripts/package.json" }}
+      - dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/discover/package.json" }}
+      - dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/lab/package.json" }}
+      - dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/schematics-angular/package.json" }}
+      - dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/v1-toolkit/package.json" }}
+      - dependency-cache-{{ .Branch }}-{{ checksum "packages/ionic/package.json" }}
+
+  - &save-cache-cli-framework
+    key: dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/cli-framework/package.json" }}
+    paths:
+      - packages/@ionic/cli-framework/node_modules
+
+  - &save-cache-cli-hooks
+    key: dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/cli-hooks/package.json" }}
+    paths:
+      - packages/@ionic/cli-hooks/node_modules
+
+  - &save-cache-cli-utils
+    key: dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/cli-utils/package.json" }}
+    paths:
+      - packages/@ionic/cli-utils/node_modules
+
+  - &save-cache-cli-scripts
+    key: dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/cli-scripts/package.json" }}
+    paths:
+      - packages/@ionic/cli-scripts/node_modules
+
+  - &save-cache-discover
+    key: dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/discover/package.json" }}
+    paths:
+      - packages/@ionic/discover/node_modules
+
+  - &save-cache-lab
+    key: dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/lab/package.json" }}
+    paths:
+      - packages/@ionic/lab/node_modules
+
+  - &save-cache-schematics-angular
+    key: dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/schematics-angular/package.json" }}
+    paths:
+      - packages/@ionic/schematics-angular/node_modules
+
+  - &save-cache-v1-toolkit
+    key: dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/v1-toolkit/package.json" }}
+    paths:
+      - packages/@ionic/v1-toolkit/node_modules
+
+  - &save-cache-ionic
+    key: dependency-cache-{{ .Branch }}-{{ checksum "packages/ionic/package.json" }}
+    paths:
+      - packages/ionic/node_modules
+
+defaults: &defaults
+  working_directory: /tmp/workspace
+
+base: &base
+  <<: *defaults
+  steps:
+    - checkout
+    - restore_cache: *restore-cache
+    - run: npm install
+    - save_cache:
+        key: dependency-cache-{{ .Branch }}-{{ checksum "package.json" }}
+        paths:
+          - node_modules
+    - run: npm run bootstrap
+    - save_cache: *save-cache-cli-framework
+    - save_cache: *save-cache-cli-hooks
+    - save_cache: *save-cache-cli-utils
+    - save_cache: *save-cache-cli-scripts
+    - save_cache: *save-cache-discover
+    - save_cache: *save-cache-lab
+    - save_cache: *save-cache-schematics-angular
+    - save_cache: *save-cache-v1-toolkit
+    - save_cache: *save-cache-ionic
+    - run: npm run lint
+    - run: npm run test
+    - persist_to_workspace:
+        root: /tmp/workspace
+        paths:
+          - "*"
+
 jobs:
-  build:
+  node6:
     docker:
       - image: circleci/node:6
+    <<: *base
+  node8:
+    docker:
+      - image: circleci/node:8
+    <<: *base
+  deploy:
+    docker:
+      - image: circleci/node:8
     steps:
-      - checkout
-      - restore_cache:
-          key: dependency-cache-{{ checksum "package.json" }}
-      - restore_cache:
-          key: dependency-cache-{{ checksum "packages/@ionic/cli-framework/package.json" }}
-      - restore_cache:
-          key: dependency-cache-{{ checksum "packages/@ionic/cli-hooks/package.json" }}
-      - restore_cache:
-          key: dependency-cache-{{ checksum "packages/@ionic/cli-utils/package.json" }}
-      - restore_cache:
-          key: dependency-cache-{{ checksum "packages/@ionic/cli-scripts/package.json" }}
-      - restore_cache:
-          key: dependency-cache-{{ checksum "packages/@ionic/discover/package.json" }}
-      - restore_cache:
-          key: dependency-cache-{{ checksum "packages/@ionic/lab/package.json" }}
-      - restore_cache:
-          key: dependency-cache-{{ checksum "packages/@ionic/schematics-angular/package.json" }}
-      - restore_cache:
-          key: dependency-cache-{{ checksum "packages/@ionic/v1-toolkit/package.json" }}
-      - restore_cache:
-          key: dependency-cache-{{ checksum "packages/ionic/package.json" }}
-      - run: npm install
-      - save_cache:
-          key: dependency-cache-{{ checksum "package.json" }}
-          paths:
-            - node_modules
-      - run: npm run bootstrap
-      - save_cache:
-          key: dependency-cache-{{ checksum "packages/@ionic/cli-framework/package.json" }}
-          paths:
-            - packages/@ionic/cli-framework/node_modules
-      - save_cache:
-          key: dependency-cache-{{ checksum "packages/@ionic/cli-hooks/package.json" }}
-          paths:
-            - packages/@ionic/cli-hooks/node_modules
-      - save_cache:
-          key: dependency-cache-{{ checksum "packages/@ionic/cli-utils/package.json" }}
-          paths:
-            - packages/@ionic/cli-utils/node_modules
-      - save_cache:
-          key: dependency-cache-{{ checksum "packages/@ionic/cli-scripts/package.json" }}
-          paths:
-            - packages/@ionic/cli-scripts/node_modules
-      - save_cache:
-          key: dependency-cache-{{ checksum "packages/@ionic/discover/package.json" }}
-          paths:
-            - packages/@ionic/discover/node_modules
-      - save_cache:
-          key: dependency-cache-{{ checksum "packages/@ionic/lab/package.json" }}
-          paths:
-            - packages/@ionic/lab/node_modules
-      - save_cache:
-          key: dependency-cache-{{ checksum "packages/@ionic/schematics-angular/package.json" }}
-          paths:
-            - packages/@ionic/schematics-angular/node_modules
-      - save_cache:
-          key: dependency-cache-{{ checksum "packages/@ionic/v1-toolkit/package.json" }}
-          paths:
-            - packages/@ionic/v1-toolkit/node_modules
-      - save_cache:
-          key: dependency-cache-{{ checksum "packages/ionic/package.json" }}
-          paths:
-            - packages/ionic/node_modules
-      - run: npm run lint
-      - run: npm run test
-      # - run: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
-      # - run: npm run publish:ci-4.x -- --yes
-    branches:
-      only:
-        - master
+      - attach_workspace:
+          at: /tmp/workspace
+      - run: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
+      - run: npm run publish:ci-4.x -- --yes
+
+workflows:
+  version: 2
+  build:
+    jobs:
+      - node6
+      - node8
+      # - deploy:
+      #     requires: [node6, node8]
+      #     filters:
+      #       branches:
+      #         only: master
