fix(ci): extract defaults for deploy before I forget

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -99,6 +99,7 @@ jobs:
       - image: circleci/node:8
     <<: *base
   deploy:
+    <<: *defaults
     docker:
       - image: circleci/node:8
     steps:
