--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,62 +2,67 @@ version: 2
 
 aliases:
   - &restore-cache
-    keys:
-      - dependency-cache-{{ .Branch }}-{{ checksum "package.json" }}
-      - dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/cli-framework/package.json" }}
-      - dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/cli-hooks/package.json" }}
-      - dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/cli-utils/package.json" }}
-      - dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/cli-scripts/package.json" }}
-      - dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/discover/package.json" }}
-      - dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/lab/package.json" }}
-      - dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/schematics-angular/package.json" }}
-      - dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/v1-toolkit/package.json" }}
-      - dependency-cache-{{ .Branch }}-{{ checksum "packages/ionic/package.json" }}
+      keys:
+        - dependency-cache-{{ .Branch }}-{{ checksum "package.json" }}
+        - dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/cli-framework/package.json" }}
+        - dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/cli-hooks/package.json" }}
+        - dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/cli-utils/package.json" }}
+        - dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/cli-scripts/package.json" }}
+        - dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/discover/package.json" }}
+        - dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/lab/package.json" }}
+        - dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/schematics-angular/package.json" }}
+        - dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/v1-toolkit/package.json" }}
+        - dependency-cache-{{ .Branch }}-{{ checksum "packages/ionic/package.json" }}
+
+  - &save-cache
+      key: dependency-cache-{{ .Branch }}-{{ checksum "package.json" }}
+      paths:
+        - node_modules
 
   - &save-cache-cli-framework
-    key: dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/cli-framework/package.json" }}
-    paths:
-      - packages/@ionic/cli-framework/node_modules
+      key: dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/cli-framework/package.json" }}
+      paths:
+        - packages/@ionic/cli-framework/node_modules
 
   - &save-cache-cli-hooks
-    key: dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/cli-hooks/package.json" }}
-    paths:
-      - packages/@ionic/cli-hooks/node_modules
+      key: dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/cli-hooks/package.json" }}
+      paths:
+        - packages/@ionic/cli-hooks/node_modules
 
   - &save-cache-cli-utils
-    key: dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/cli-utils/package.json" }}
-    paths:
-      - packages/@ionic/cli-utils/node_modules
+      key: dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/cli-utils/package.json" }}
+      paths:
+        - packages/@ionic/cli-utils/node_modules
 
   - &save-cache-cli-scripts
-    key: dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/cli-scripts/package.json" }}
-    paths:
-      - packages/@ionic/cli-scripts/node_modules
+      key: dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/cli-scripts/package.json" }}
+      paths:
+        - packages/@ionic/cli-scripts/node_modules
 
   - &save-cache-discover
-    key: dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/discover/package.json" }}
-    paths:
-      - packages/@ionic/discover/node_modules
+      key: dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/discover/package.json" }}
+      paths:
+        - packages/@ionic/discover/node_modules
 
   - &save-cache-lab
-    key: dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/lab/package.json" }}
-    paths:
-      - packages/@ionic/lab/node_modules
+      key: dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/lab/package.json" }}
+      paths:
+        - packages/@ionic/lab/node_modules
 
   - &save-cache-schematics-angular
-    key: dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/schematics-angular/package.json" }}
-    paths:
-      - packages/@ionic/schematics-angular/node_modules
+      key: dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/schematics-angular/package.json" }}
+      paths:
+        - packages/@ionic/schematics-angular/node_modules
 
   - &save-cache-v1-toolkit
-    key: dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/v1-toolkit/package.json" }}
-    paths:
-      - packages/@ionic/v1-toolkit/node_modules
+      key: dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/v1-toolkit/package.json" }}
+      paths:
+        - packages/@ionic/v1-toolkit/node_modules
 
   - &save-cache-ionic
-    key: dependency-cache-{{ .Branch }}-{{ checksum "packages/ionic/package.json" }}
-    paths:
-      - packages/ionic/node_modules
+      key: dependency-cache-{{ .Branch }}-{{ checksum "packages/ionic/package.json" }}
+      paths:
+        - packages/ionic/node_modules
 
 defaults: &defaults
   working_directory: /tmp/workspace
@@ -68,10 +73,7 @@ base: &base
     - checkout
     - restore_cache: *restore-cache
     - run: npm install
-    - save_cache:
-        key: dependency-cache-{{ .Branch }}-{{ checksum "package.json" }}
-        paths:
-          - node_modules
+    - save_cache: *save-cache
     - run: npm run bootstrap
     - save_cache: *save-cache-cli-framework
     - save_cache: *save-cache-cli-hooks
