--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "test": "lerna run test",
     "build": "lerna run build",
     "watch": "lerna run watch --parallel",
-    "docs": "node packages/@ionic/cli-scripts/bin/ionic-cli-scripts docs",
-    "docs:watch": "chokidar 'packages/@ionic/cli-scripts/dist/docs/**/*.js' -c 'npm run docs'",
+    "docs": "node packages/cli-scripts/bin/ionic-cli-scripts docs",
+    "docs:watch": "chokidar 'packages/cli-scripts/dist/docs/**/*.js' -c 'npm run docs'",
     "publish:rc": "lerna publish --exact --npm-tag=rc",
     "publish:canary": "lerna publish --canary --exact --npm-tag=canary --skip-git",
     "publish:testing": "lerna publish --canary=testing --exact --npm-tag=testing --skip-git",
