chore(bot): add issue mover for capacitor

--- a/.github/ionic-issue-bot.yml
+++ b/.github/ionic-issue-bot.yml
@@ -58,6 +58,16 @@ wrongRepo:
 
 
         Thank you for using Ionic!
+    - label: "ionitron: capacitor"
+      repo: ionic
+      message: >
+        Thanks for the issue! We use this issue tracker exclusively for bug
+        reports and feature requests for the Ionic CLI. It appears that this
+        issue is associated with Capacitor. I am moving this issue to the
+        Capacitor repository. Please track this issue over there.
+
+
+        Thank you for using Ionic!
   close: true
   lock: true
   dryRun: false
