--- a/.github/ionic-issue-bot.yml
+++ b/.github/ionic-issue-bot.yml
@@ -22,6 +22,15 @@ closeAndLock:
 
 
         Thank you for using Ionic!
+    - label: "ionitron: cordova"
+      message: >
+        Thanks for the issue! We use this issue tracker exclusively for bug
+        reports and feature requests for the Ionic CLI. It appears that this
+        issue is associated with Cordova. Please see Cordova's [Reporting
+        Issues](https://cordova.apache.org/contribute/issues.html) page.
+
+
+        Thank you for using Ionic!
   close: true
   lock: true
   dryRun: false
