--- a/.github/ionic-issue-bot.yml
+++ b/.github/ionic-issue-bot.yml
@@ -87,6 +87,16 @@ wrongRepo:
 
 
         Thank you for using Ionic!
+    - label: "ionitron: ionic-site"
+      repo: ionic-native
+      message: >
+        Thanks for the issue! We use this issue tracker exclusively for bug
+        reports and feature requests for the Ionic CLI. It appears that this
+        issue is associated with the Ionic website. I am moving this issue to
+        the Ionic website repository. Please track this issue over there.
+
+
+        Thank you for using Ionic!
   close: true
   lock: true
   dryRun: false
