--- a/packages/@ionic/cli-framework/package.json
+++ b/packages/@ionic/cli-framework/package.json
@@ -22,6 +22,7 @@
     "chalk": "^2.3.0",
     "debug": "^3.1.0",
     "klaw": "^2.1.1",
+    "inquirer": "^5.0.1",
     "lodash": "^4.17.5",
     "minimist": "^1.2.0",
     "ncp": "^2.0.0",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@types/debug": "0.0.30",
+    "@types/inquirer": "0.0.41",
     "@types/klaw": "^2.1.1",
     "@types/lodash": "^4.14.104",
     "@types/minimist": "^1.2.0",
