feat(shell): shell command primitive

--- a/packages/@ionic/cli-framework/tsconfig.json
+++ b/packages/@ionic/cli-framework/tsconfig.json
@@ -4,6 +4,7 @@
     "outDir": "./"
   },
   "include": [
+    "../../../types/cross-spawn.d.ts",
     "../../../types/string-width.d.ts",
     "../../../types/slice-ansi.d.ts",
     "src/**/*.ts"
