refactor(shell): use ShellCommand in utils

--- a/packages/@ionic/cli-utils/tsconfig.json
+++ b/packages/@ionic/cli-utils/tsconfig.json
@@ -15,6 +15,7 @@
     "../../../types/rxjs-custom.d.ts",
     "../../../types/slice-ansi.d.ts",
     "../../../types/ssh-config.d.ts",
+    "../../../types/stream-combiner2.d.ts",
     "../../../types/string-width.d.ts",
     "../../../types/superagent-proxy.d.ts",
     "../../../types/superagent.d.ts",
