--- a/packages/@ionic/cli-framework/tsconfig.json
+++ b/packages/@ionic/cli-framework/tsconfig.json
@@ -5,6 +5,7 @@
   },
   "include": [
     "../../../types/cross-spawn.d.ts",
+    "../../../types/stream-combiner2.d.ts",
     "../../../types/string-width.d.ts",
     "../../../types/slice-ansi.d.ts",
     "src/**/*.ts"
