--- a/packages/@ionic/cli-framework/package.json
+++ b/packages/@ionic/cli-framework/package.json
@@ -28,6 +28,7 @@
     "ncp": "^2.0.0",
     "rimraf": "^2.6.2",
     "slice-ansi": "^1.0.0",
+    "stream-combiner2": "^1.1.1",
     "string-width": "^2.1.1",
     "strip-ansi": "^4.0.0",
     "tslib": "^1.9.0",
