--- a/packages/@ionic/cli-framework/package.json
+++ b/packages/@ionic/cli-framework/package.json
@@ -24,6 +24,7 @@
     "inquirer": "^5.0.1",
     "klaw": "^2.1.1",
     "lodash": "^4.17.5",
+    "make-dir": "^1.3.0",
     "minimist": "^1.2.0",
     "ncp": "^2.0.0",
     "rimraf": "^2.6.2",
@@ -33,13 +34,15 @@
     "strip-ansi": "^4.0.0",
     "tslib": "^1.9.0",
     "untildify": "^3.0.2",
-    "wrap-ansi": "^3.0.1"
+    "wrap-ansi": "^3.0.1",
+    "write-file-atomic": "^2.3.0"
   },
   "devDependencies": {
     "@types/debug": "0.0.30",
     "@types/inquirer": "0.0.41",
     "@types/klaw": "^2.1.1",
     "@types/lodash": "^4.14.104",
+    "@types/make-dir": "^1.0.3",
     "@types/minimist": "^1.2.0",
     "@types/ncp": "^2.0.1",
     "@types/node": "^6.0.101",
@@ -47,6 +50,7 @@
     "@types/strip-ansi": "^3.0.0",
     "@types/untildify": "^3.0.0",
     "@types/wrap-ansi": "^3.0.0",
+    "@types/write-file-atomic": "^2.1.1",
     "jest": "^22.4.2",
     "jest-cli": "^22.4.2",
     "ts-jest": "^22.4.1",
