--- a/packages/@ionic/cli-framework/package.json
+++ b/packages/@ionic/cli-framework/package.json
@@ -10,7 +10,7 @@
     "node": ">=6.4.0"
   },
   "scripts": {
-    "clean": "rimraf index.* definitions.* guards.* lib utils",
+    "clean": "rimraf index.* definitions.* errors.* guards.* lib utils",
     "lint": "tslint --config tslint.js --project tsconfig.json",
     "build": "npm run clean && tsc",
     "watch": "tsc -w --preserveWatchOutput",
