refactor(cordova): remove unused html parsing/cordova engine code

--- a/packages/@ionic/cli-utils/tsconfig.json
+++ b/packages/@ionic/cli-utils/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "extends": "../../../tsconfig.base.json",
   "compilerOptions": {
-    "baseUrl": ".",
-    "outDir": "./",
-    "paths": {
-      "parse5": ["../../../node_modules/parse5/lib/index.d.ts"]
-    }
+    "outDir": "./"
   },
   "include": [
     "../../../types/elementtree.d.ts",
