--- a/packages/@ionic/ng-toolkit/package.json
+++ b/packages/@ionic/ng-toolkit/package.json
@@ -32,10 +32,6 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
-    "@angular-devkit/architect": "0.6.7",
-    "@angular-devkit/build-angular": "0.6.7",
-    "@angular-devkit/core": "0.6.7",
-    "@angular-devkit/schematics": "0.6.7",
     "@ionic/cli-framework": "1.0.0-rc.6",
     "@ionic/schematics-angular": "1.0.0-rc.6",
     "chalk": "^2.3.0",
@@ -45,11 +41,21 @@
     "webpack": "~4.6.0"
   },
   "devDependencies": {
+    "@angular-devkit/architect": "~0.6.7",
+    "@angular-devkit/build-angular": "~0.6.7",
+    "@angular-devkit/core": "~0.6.7",
+    "@angular-devkit/schematics": "~0.6.7",
     "@types/debug": "0.0.30",
     "@types/node": "^6.0.101",
     "@types/webpack": "^4.4.0",
     "rimraf": "^2.6.2",
     "tslint": "^5.9.1",
     "typescript": "~2.9.1"
+  },
+  "peerDependencies": {
+    "@angular-devkit/architect": "~0.6.7",
+    "@angular-devkit/build-angular": "~0.6.7",
+    "@angular-devkit/core": "~0.6.7",
+    "@angular-devkit/schematics": "~0.6.7"
   }
 }
