--- a/packages/@ionic/schematics-angular/package.json
+++ b/packages/@ionic/schematics-angular/package.json
@@ -21,14 +21,14 @@
   ],
   "schematics": "./collection.json",
   "dependencies": {
-    "@angular-devkit/core": "0.6.7",
-    "@angular-devkit/schematics": "0.6.7",
     "@schematics/angular": "0.6.7",
     "lodash": "^4.17.5",
     "tslib": "^1.9.0",
     "typescript": ">=2.6.2 <2.8"
   },
   "devDependencies": {
+    "@angular-devkit/core": "~0.6.7",
+    "@angular-devkit/schematics": "~0.6.7",
     "@types/lodash": "^4.14.104",
     "@types/node": "^6.0.101",
     "jest": "^23.0.1",
@@ -37,5 +37,9 @@
     "source-map": "^0.7.0",
     "ts-jest": "^22.4.1",
     "tslint": "^5.9.1"
+  },
+  "peerDependencies": {
+    "@angular-devkit/core": "~0.6.7",
+    "@angular-devkit/schematics": "~0.6.7"
   }
 }
