--- a/packages/@ionic/ng-toolkit/package.json
+++ b/packages/@ionic/ng-toolkit/package.json
@@ -37,8 +37,7 @@
     "chalk": "^2.3.0",
     "debug": "^3.1.0",
     "rxjs": "^6.2.0",
-    "tslib": "^1.9.0",
-    "webpack": "~4.6.0"
+    "tslib": "^1.9.0"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.6.7",
@@ -47,7 +46,6 @@
     "@angular-devkit/schematics": "~0.6.7",
     "@types/debug": "0.0.30",
     "@types/node": "^6.0.101",
-    "@types/webpack": "^4.4.0",
     "rimraf": "^2.6.2",
     "tslint": "^5.9.1",
     "typescript": "~2.9.1"
