--- a/packages/@ionic/ng-toolkit/package.json
+++ b/packages/@ionic/ng-toolkit/package.json
@@ -40,10 +40,10 @@
     "tslib": "^1.9.0"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "~0.6.7",
-    "@angular-devkit/build-angular": "~0.6.7",
-    "@angular-devkit/core": "~0.6.7",
-    "@angular-devkit/schematics": "~0.6.7",
+    "@angular-devkit/architect": "0.7.0-beta.1",
+    "@angular-devkit/build-angular": "0.7.0-beta.1",
+    "@angular-devkit/core": "0.7.0-beta.1",
+    "@angular-devkit/schematics": "0.7.0-beta.1",
     "@types/debug": "0.0.30",
     "@types/node": "^6.0.101",
     "rimraf": "^2.6.2",
@@ -51,9 +51,9 @@
     "typescript": "~2.9.1"
   },
   "peerDependencies": {
-    "@angular-devkit/architect": "~0.6.7",
-    "@angular-devkit/build-angular": "~0.6.7",
-    "@angular-devkit/core": "~0.6.7",
-    "@angular-devkit/schematics": "~0.6.7"
+    "@angular-devkit/architect": "0.7.0-beta.1",
+    "@angular-devkit/build-angular": "0.7.0-beta.1",
+    "@angular-devkit/core": "0.7.0-beta.1",
+    "@angular-devkit/schematics": "0.7.0-beta.1"
   }
 }
