--- a/packages/@ionic/schematics-angular/package.json
+++ b/packages/@ionic/schematics-angular/package.json
@@ -27,8 +27,8 @@
     "typescript": ">=2.6.2 <2.8"
   },
   "devDependencies": {
-    "@angular-devkit/core": "~0.6.7",
-    "@angular-devkit/schematics": "~0.6.7",
+    "@angular-devkit/core": "0.7.0-beta.1",
+    "@angular-devkit/schematics": "0.7.0-beta.1",
     "@types/lodash": "^4.14.104",
     "@types/node": "^6.0.101",
     "jest": "^23.0.1",
@@ -39,7 +39,7 @@
     "tslint": "^5.9.1"
   },
   "peerDependencies": {
-    "@angular-devkit/core": "~0.6.7",
-    "@angular-devkit/schematics": "~0.6.7"
+    "@angular-devkit/core": "0.7.0-beta.1",
+    "@angular-devkit/schematics": "0.7.0-beta.1"
   }
 }
