--- a/packages/@ionic/ng-toolkit/package.json
+++ b/packages/@ionic/ng-toolkit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ionic/ng-toolkit",
-  "version": "0.0.1",
+  "version": "1.0.0-rc.7",
   "description": "Utilities for Ionic Angular v4+ apps, used by Ionic CLI",
   "bin": {
     "ionic-ng": "./bin/ionic-ng"
@@ -33,7 +33,7 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
-    "@ionic/cli-framework": "1.0.0-rc.6",
+    "@ionic/cli-framework": "1.0.0-rc.7",
     "chalk": "^2.3.0",
     "debug": "^3.1.0",
     "rxjs": "^6.2.0",
