--- a/packages/@ionic/cli-framework/package.json
+++ b/packages/@ionic/cli-framework/package.json
@@ -47,6 +47,7 @@
     "@types/ncp": "^2.0.1",
     "@types/node": "^6.0.101",
     "@types/rimraf": "^2.0.2",
+    "@types/string-width": "^2.0.0",
     "@types/strip-ansi": "^3.0.0",
     "@types/untildify": "^3.0.0",
     "@types/wrap-ansi": "^3.0.0",
