--- a/packages/@ionic/cli-framework/package.json
+++ b/packages/@ionic/cli-framework/package.json
@@ -38,6 +38,7 @@
     "write-file-atomic": "^2.3.0"
   },
   "devDependencies": {
+    "@types/cross-spawn": "^6.0.0",
     "@types/debug": "0.0.30",
     "@types/inquirer": "0.0.42",
     "@types/klaw": "^2.1.1",
