--- a/packages/@ionic/ng-toolkit/package.json
+++ b/packages/@ionic/ng-toolkit/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ionic/ng-toolkit",
   "version": "1.0.0-rc.10",
-  "description": "Utilities for Ionic Angular v4+ apps, used by Ionic CLI",
+  "description": "Utilities for ionic/angular v4+ apps, used by Ionic CLI",
   "bin": {
     "ionic-ng": "./bin/ionic-ng"
   },
