--- a/.github/ionic-issue-bot.yml
+++ b/.github/ionic-issue-bot.yml
@@ -78,7 +78,7 @@ wrongRepo:
 
         Thank you for using Ionic!
     - label: "ionitron: capacitor"
-      repo: ionic
+      repo: capacitor
       message: >
         Thanks for the issue! We use this issue tracker exclusively for bug
         reports and feature requests for the Ionic CLI. It appears that this
