chore(release): PUBLISH 4.0.0 :tada: [skip ci]
 - @ionic/cli-framework@1.0.0
 - @ionic/cli-utils@2.0.0
 - @ionic/discover@1.0.0
 - @ionic/lab@1.0.0
 - @ionic/ng-toolkit@1.0.0
 - @ionic/schematics-angular@1.0.0
 - @ionic/v1-toolkit@1.0.0
 - cli-scripts@0.0.9
 - ionic@4.0.0

--- a/packages/@ionic/ng-toolkit/package.json
+++ b/packages/@ionic/ng-toolkit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ionic/ng-toolkit",
-  "version": "1.0.0-rc.13",
+  "version": "1.0.0",
   "description": "Utilities for ionic/angular v4+ apps, used by Ionic CLI",
   "bin": {
     "ionic-ng": "./bin/ionic-ng"
@@ -33,7 +33,7 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
-    "@ionic/cli-framework": "1.0.0-rc.13",
+    "@ionic/cli-framework": "1.0.0",
     "chalk": "^2.3.0",
     "debug": "^3.1.0",
     "rxjs": "^6.2.0",
