--- a/packages/cli-scripts/package.json
+++ b/packages/cli-scripts/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "cli-scripts",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "bin": {
     "ionic-cli-scripts": "./bin/ionic-cli-scripts"
   },
@@ -16,12 +16,12 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "dependencies": {
-    "@ionic/cli-framework": "1.0.0-rc.13",
-    "@ionic/cli-utils": "2.0.0-rc.13",
+    "@ionic/cli-framework": "1.0.0",
+    "@ionic/cli-utils": "2.0.0",
     "ansi-styles": "^3.2.0",
     "chalk": "^2.3.0",
     "escape-string-regexp": "^1.0.5",
-    "ionic": "4.0.0-rc.13",
+    "ionic": "4.0.0",
     "strip-ansi": "^4.0.0",
     "tslib": "^1.9.0"
   },
