--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
     "watch": "lerna run watch --parallel",
     "docs": "node packages/cli-scripts/bin/ionic-cli-scripts docs",
     "docs:watch": "chokidar 'packages/cli-scripts/dist/docs/**/*.js' -c 'npm run docs'",
-    "publish:rc": "lerna publish --exact --npm-tag=rc",
-    "publish:canary": "lerna publish --canary --exact --npm-tag=canary --skip-git",
-    "publish:testing": "lerna publish --canary=testing --exact --npm-tag=testing --skip-git",
-    "publish": "lerna publish --exact",
+    "publish:canary": "lerna publish --independent --canary --exact --npm-tag=canary --skip-git",
+    "publish:testing": "lerna publish --independent --canary=testing --exact --npm-tag=testing --skip-git",
+    "publish:ci": "lerna publish --independent -m 'chore(release): publish [skip ci]' --exact --conventional-commits",
     "precommit": "npm run lint"
   },
   "devDependencies": {
