chore(ci): take out branch in cache key

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,58 +5,58 @@ version: 2
 aliases:
   - &restore-cache
       keys:
-        - dependency-cache-{{ .Branch }}-{{ checksum "package.json" }}
-        - dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/cli-framework/package.json" }}
-        - dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/cli-utils/package.json" }}
-        - dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/discover/package.json" }}
-        - dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/lab/package.json" }}
-        - dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/schematics-angular/package.json" }}
-        - dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/v1-toolkit/package.json" }}
-        - dependency-cache-{{ .Branch }}-{{ checksum "packages/cli-scripts/package.json" }}
-        - dependency-cache-{{ .Branch }}-{{ checksum "packages/ionic/package.json" }}
+        - dependency-cache-{{ checksum "package.json" }}
+        - dependency-cache-{{ checksum "packages/@ionic/cli-framework/package.json" }}
+        - dependency-cache-{{ checksum "packages/@ionic/cli-utils/package.json" }}
+        - dependency-cache-{{ checksum "packages/@ionic/discover/package.json" }}
+        - dependency-cache-{{ checksum "packages/@ionic/lab/package.json" }}
+        - dependency-cache-{{ checksum "packages/@ionic/schematics-angular/package.json" }}
+        - dependency-cache-{{ checksum "packages/@ionic/v1-toolkit/package.json" }}
+        - dependency-cache-{{ checksum "packages/cli-scripts/package.json" }}
+        - dependency-cache-{{ checksum "packages/ionic/package.json" }}
 
   - &save-cache
-      key: dependency-cache-{{ .Branch }}-{{ checksum "package.json" }}
+      key: dependency-cache-{{ checksum "package.json" }}
       paths:
         - node_modules
 
   - &save-cache-cli-framework
-      key: dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/cli-framework/package.json" }}
+      key: dependency-cache-{{ checksum "packages/@ionic/cli-framework/package.json" }}
       paths:
         - packages/@ionic/cli-framework/node_modules
 
   - &save-cache-cli-utils
-      key: dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/cli-utils/package.json" }}
+      key: dependency-cache-{{ checksum "packages/@ionic/cli-utils/package.json" }}
       paths:
         - packages/@ionic/cli-utils/node_modules
 
   - &save-cache-discover
-      key: dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/discover/package.json" }}
+      key: dependency-cache-{{ checksum "packages/@ionic/discover/package.json" }}
       paths:
         - packages/@ionic/discover/node_modules
 
   - &save-cache-lab
-      key: dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/lab/package.json" }}
+      key: dependency-cache-{{ checksum "packages/@ionic/lab/package.json" }}
       paths:
         - packages/@ionic/lab/node_modules
 
   - &save-cache-schematics-angular
-      key: dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/schematics-angular/package.json" }}
+      key: dependency-cache-{{ checksum "packages/@ionic/schematics-angular/package.json" }}
       paths:
         - packages/@ionic/schematics-angular/node_modules
 
   - &save-cache-v1-toolkit
-      key: dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/v1-toolkit/package.json" }}
+      key: dependency-cache-{{ checksum "packages/@ionic/v1-toolkit/package.json" }}
       paths:
         - packages/@ionic/v1-toolkit/node_modules
 
   - &save-cache-cli-scripts
-      key: dependency-cache-{{ .Branch }}-{{ checksum "packages/cli-scripts/package.json" }}
+      key: dependency-cache-{{ checksum "packages/cli-scripts/package.json" }}
       paths:
         - packages/cli-scripts/node_modules
 
   - &save-cache-ionic
-      key: dependency-cache-{{ .Branch }}-{{ checksum "packages/ionic/package.json" }}
+      key: dependency-cache-{{ checksum "packages/ionic/package.json" }}
       paths:
         - packages/ionic/node_modules
 
