--- a/packages/@ionic/cli-utils/package.json
+++ b/packages/@ionic/cli-utils/package.json
@@ -12,7 +12,11 @@
     "build": "npm run clean && tsc",
     "watch": "tsc -w --preserveWatchOutput",
     "test": "jest",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": "npm run lint"
   },
   "keywords": [
     "ionic",
@@ -72,6 +76,7 @@
     "@types/uuid": "^3.4.3",
     "jest": "^23.0.1",
     "jest-cli": "^23.0.1",
+    "lint-staged": "^7.2.0",
     "rimraf": "^2.6.2",
     "source-map": "^0.7.0",
     "ts-jest": "^23.0.0",
