--- a/packages/@ionic/lab/package.json
+++ b/packages/@ionic/lab/package.json
@@ -35,7 +35,11 @@
     "watch": "npm run watch.tsc",
     "watch.stencil": "npm run clean.stencil && concurrently \"stencil build --dev --watch\" \"stencil-dev-server --address localhost --httpPort 8900 --no-open\"",
     "watch.tsc": "tsc -w --preserveWatchOutput",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": "npm run lint"
   },
   "dependencies": {
     "@ionic/cli-framework": "1.0.0",
@@ -51,6 +55,7 @@
     "concurrently": "^3.5.1",
     "jest": "^23.0.1",
     "jest-cli": "^23.0.1",
+    "lint-staged": "^7.2.0",
     "rimraf": "^2.6.2",
     "ts-jest": "^23.0.0",
     "tslint": "^5.9.1",
