--- a/packages/@ionic/ng-toolkit/package.json
+++ b/packages/@ionic/ng-toolkit/package.json
@@ -30,7 +30,11 @@
     "lint": "tslint --config tslint.js --project tsconfig.json",
     "build": "npm run clean && tsc",
     "watch": "tsc -w --preserveWatchOutput",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": "npm run lint"
   },
   "dependencies": {
     "@ionic/cli-framework": "1.0.0",
@@ -46,6 +50,7 @@
     "@angular-devkit/schematics": "0.7.0-rc.1",
     "@types/debug": "0.0.30",
     "@types/node": "^6.0.101",
+    "lint-staged": "^7.2.0",
     "rimraf": "^2.6.2",
     "tslint": "^5.9.1",
     "typescript": "~2.9.1"
