--- a/packages/@ionic/schematics-angular/package.json
+++ b/packages/@ionic/schematics-angular/package.json
@@ -9,7 +9,11 @@
     "lint": "tslint --config tslint.js --project tsconfig.json",
     "build": "npm run clean && tsc",
     "watch": "tsc -w",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": "npm run lint"
   },
   "keywords": [
     "blueprints",
@@ -33,6 +37,7 @@
     "@types/node": "^6.0.101",
     "jest": "^23.0.1",
     "jest-cli": "^23.0.1",
+    "lint-staged": "^7.2.0",
     "rimraf": "^2.6.2",
     "source-map": "^0.7.0",
     "ts-jest": "^23.0.0",
