--- a/packages/cli-scripts/package.json
+++ b/packages/cli-scripts/package.json
@@ -11,7 +11,11 @@
     "build": "npm run clean && tsc",
     "watch": "tsc -w --preserveWatchOutput",
     "test": "jest",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": "npm run lint"
   },
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -32,6 +36,7 @@
     "@types/strip-ansi": "^3.0.0",
     "jest": "^23.0.1",
     "jest-cli": "^23.0.1",
+    "lint-staged": "^7.2.0",
     "rimraf": "^2.6.2",
     "ts-jest": "^23.0.0",
     "tslint": "^5.9.1",
