--- a/packages/@ionic/discover/package.json
+++ b/packages/@ionic/discover/package.json
@@ -29,7 +29,12 @@
     "precommit": "lint-staged"
   },
   "lint-staged": {
-    "*.{ts,tsx}": "npm run lint"
+    "linters": {
+      "*.{ts,tsx}": "npm run lint"
+    },
+    "ignore": [
+      "**/__tests__/*.{ts,tsx}"
+    ]
   },
   "dependencies": {
     "debug": "^3.1.0",
