--- a/packages/@ionic/cli-framework/package.json
+++ b/packages/@ionic/cli-framework/package.json
@@ -56,6 +56,7 @@
     "stream-combiner2": "^1.1.1",
     "string-width": "^2.1.1",
     "strip-ansi": "^4.0.0",
+    "tree-kill": "1.2.0",
     "tslib": "^1.9.0",
     "untildify": "^3.0.2",
     "wrap-ansi": "^3.0.1",
