--- a/packages/@ionic/schematics-angular/package.json
+++ b/packages/@ionic/schematics-angular/package.json
@@ -30,7 +30,7 @@
   ],
   "schematics": "./collection.json",
   "dependencies": {
-    "@schematics/angular": "0.7.0",
+    "@schematics/angular": "~0.7.2",
     "lodash": "^4.17.5",
     "tslib": "^1.9.0",
     "typescript": ">=2.6.2 <2.8"
