chore: fix build by locking in ts-jest...

--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -96,7 +96,7 @@
     "jest-cli": "^23.0.1",
     "lint-staged": "^7.2.0",
     "rimraf": "^2.6.2",
-    "ts-jest": "^23.0.0",
+    "ts-jest": "~23.1.0",
     "tslint": "^5.9.1",
     "typescript": "~3.0.1"
   }
