--- a/packages/@ionic/cli-framework/package.json
+++ b/packages/@ionic/cli-framework/package.json
@@ -61,7 +61,7 @@
     "jest": "^23.0.1",
     "jest-cli": "^23.0.1",
     "lint-staged": "^7.2.0",
-    "ts-jest": "^23.0.0",
+    "ts-jest": "~23.1.0",
     "tslint": "^5.9.1",
     "typescript": "~3.0.1"
   }
