--- a/packages/@ionic/schematics-angular/package.json
+++ b/packages/@ionic/schematics-angular/package.json
@@ -10,7 +10,7 @@
     "build": "npm run clean && tsc",
     "watch": "tsc -w",
     "prepublishOnly": "npm run build",
-    "precommit": "lint-staged"
+    "cli-scripts:pre-commit": "lint-staged"
   },
   "lint-staged": {
     "linters": {
