--- a/packages/@ionic/lab/package.json
+++ b/packages/@ionic/lab/package.json
@@ -36,7 +36,7 @@
     "watch.stencil": "npm run clean.stencil && concurrently \"stencil build --dev --watch\" \"stencil-dev-server --address localhost --httpPort 8900 --no-open\"",
     "watch.tsc": "tsc -w --preserveWatchOutput",
     "prepublishOnly": "npm run build",
-    "precommit": "lint-staged"
+    "cli-scripts:pre-commit": "lint-staged"
   },
   "lint-staged": {
     "linters": {
